# python-l3

./: Makefile  profile_map_pow_repeat_and_list_comprehension.txt  profile_reduce_and_list_comprehension.txt  pyproject.toml
hashit/: .gitignore  Makefile  profile_output.txt  sha_prof.py
test_functools/: __init__.py  test_cache.py  test_cached_property.py  test_cmp_to_key.py  test_lru_cache.py  test_partial.py  test_partialmethod.py  test_reduce.py  test_singledispatch.py  test_singledispatchmethod.py  test_total_ordering.py  test_wraps.py
test_itertools/combinatoric_iterators/: test_combinations.py  test_combinations_with_replacement.py  test_permutations.py  test_product.py
test_itertools/infinite_iterators/: test_count.py  test_cycle.py  test_repeat.py
test_itertools/terminating_on_shortest_input/: test_accumulate.py  test_batched.py  test_chain.py  test_compress.py  test_dropwhile.py  test_filterfalse.py  test_groupby.py  test_islice.py  test_pairwise.py  test_starmap.py  test_takewhile.py  test_tee.py  test_ziplongest.py
test_metaclasses/: test_mytype.py  test_singleton_meta.py  test_type.py
test_threading/: test_active_count.py  test_current_thread.py  test_get_ident.py  test_get_native_id.py  test_thread_local_data.py
test_threading/generic/: test_current_thread.py  test_excepthook.py  test_threading_enumerate.py
